--- a/.gitignore
+++ b/.gitignore
@@ -12,8 +12,10 @@ dist
 dist-ssr
 *.local
 
-/src/services/apiClient.ts
-src/services/apiClient.ts
+.env                # loaded in all cases
+.env.local          # loaded in all cases, ignored by git
+.env.[mode]         # only loaded in specified mode
+.env.[mode].local   # only loaded in specified mode, ignored by git
 
 # Editor directories and files
 .vscode/*
